# documents-builder

./: .env.example  Cargo.toml  README.md  docker-compose.yml
docs/: action-plan.md  document-version-tracking.md  documents-schema.md  mermaid.mmd  product-requirements.md  rate-limiting-improvements.md
init-scripts/: 0001-create-test-database.sql
migrations/: 0001_initial.sql
src/: config.rs  console.rs  database.rs  github.rs  lib.rs
src/commands/: export_fragments.rs  health_checks.rs  list_all.rs  mod.rs  process_organization.rs  process_repository.rs  scan_org.rs  scan_organization.rs  serve_webhook.rs  validate_config.rs  validate_repo_config.rs  validate_repository_configuration.rs
src/output/: fragment.rs  mod.rs  storage.rs
src/processing/: discovery.rs  mod.rs  navigation.rs  output_handler.rs  path_normalization.rs  pipeline.rs  processor.rs  validate_config.rs  validation.rs
src/web/: mod.rs
tests/: test_config_file.rs  test_processing.rs
