[package]
name = "documents"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.8"
axum = { version = "0.8" }
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
octocrab = "0.44"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
toml = "0.8.23"

[dev-dependencies]
mockito = "1.7"
