[package]
name = "documents"
version = "0.1.0"
edition = "2024"

[dependencies]
async-fs = "1.6"
async-trait = "0.1.8"
axum = { version = "0.8" }
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
dotenvy = "0.15"
futures-lite = "1.13.0"
glob = "0.3"
html-escape = "0.2"
indicatif = "0.17"
octocrab = "0.44"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "chrono", "uuid", "migrate" ] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8.23"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
mockito = "1.7"
tempfile = "3.20"

[features]
integration-tests = []

[[test]]
name = "test_processing"
required-features = ["integration-tests"]
